[package]
name = "nobject-rs"
version = "1.3.0"
authors = ["shmapdy <richard.meester@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["gamedev", "graphics", "wavefront", "obj", "mtl"]
categories = ["rendering::data-formats"]
repository = "https://github.com/gadunga/nobject-rs"
description = "A parser for wavefront Obj/Mtl files. Written with Nom."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
log = "0.4"
nom = "6.2"
thiserror = "1.0"