[package]
name = "nobject-rs"
version = "3.0.1"
authors = ["shmapdy <richard.meester@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["gamedev", "graphics", "wavefront", "obj", "mtl"]
categories = ["rendering::data-formats"]
repository = "https://github.com/gadunga/nobject-rs"
description = "A parser for wavefront Obj/Mtl files. Written with Nom."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = {version = "1.0", features = ["constructor", "from", "into"]}
log = "0.4"
nom = "8.0"
thiserror = "2.0"
